about to make minor changes in the backend functionality, then, switch to modifying the front end

--- a/backend/opencode/.env.example
+++ b/backend/opencode/.env.example
@@ -1,6 +1,8 @@
-LIVEKIT_URL=<your LiveKit server URL>
-LIVEKIT_API_KEY=<your API Key>
-LIVEKIT_API_SECRET=<your API Secret>
-OPENAI_API_KEY=<To use other providers, press Enter for now and edit .env.local>
-DEEPGRAM_API_KEY=<To use other providers, press Enter for now and edit .env.local>
-CARTESIA_API_KEY=<To use other providers, press Enter for now and edit .env.local>
+CARTESIA_API_KEY=sk_car_blR7RyZAKM3LDAxpy4Ngn
+DEEPGRAM_API_KEY="8683207e8d7ddf34d3bf1f76ef6662a9f208cced"
+LIVEKIT_API_KEY="APIwkCaqxWBbfY9"
+LIVEKIT_API_SECRET="ocPjHHDsn7ZxPSkURNMsYtReu38ueaJvUuTL1ZuPVzV"
+LIVEKIT_URL="wss://test-app-cp422dq0.livekit.cloud"
+OPENAI_API_KEY="sk-proj-plzHE7g0YBvmPbDlwmUqY-I4ztF9iLxVSkmZ5M9pM7XN_tL_tEv8VFOjpTg0B2CzPKadT3BlbkFJlU-AXOAogDaJHifguo88jzFIswYzv9d2EYn2XLPgIL8ZBhhpoG_zw9F2OtsKjbNOtElTL3nkAA"
+GROQ_API_KEY="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"
+ELEVEN_API_KEY="sk_8ee08169c99a42f4e4574d700403584bcb1285ebbbd5d8df"
